# GMatch

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  GMatch.code-workspace  LICENSE  README.md  config.ini  config.ini.example
docs/: API.md  CODE_MAP.md  DESIGN.md  FAQ.md  PERFORMANCE.md
scripts/: build.sh  run_client.sh  run_server.sh  test_match.sh
src/: main.cpp
src/client/: CMakeLists.txt  MatchClient.cpp  MatchClient.h  SimpleClient.cpp
src/core/: CMakeLists.txt  MatchMaker.cpp  MatchMaker.h  MatchManager.cpp  MatchManager.h  MatchQueue.cpp  MatchQueue.h  MatchStrategy.cpp  MatchStrategy.h  Player.cpp  Player.h  Room.cpp  Room.h
src/server/: CMakeLists.txt  MatchServer.cpp  MatchServer.h  RequestHandler.cpp  RequestHandler.h  TcpConnection.cpp  TcpServer.cpp  TcpServer.h
src/util/: CMakeLists.txt  Config.cpp  Config.h  Logger.cpp  Logger.h  TimeUtil.cpp  TimeUtil.h
test/: CMakeLists.txt  test_matchmaker.cpp  test_matchmanager.cpp  test_player.cpp  test_room.cpp
